@@ -38,8 +38,8 @@ MODULE = Net::DirectConnect::TigerHash		PACKAGE = Net::DirectConnect::TigerHash
 
 SV * 
 tthbin(s)
-    SV *s
     PROTOTYPE: $
+    SV *s
     CODE:
         STRLEN len;
         char *  ptr = SvPV(s, len);
@@ -52,8 +52,8 @@ tthbin(s)
 
 SV *
 tth(s)
-    SV *s
     PROTOTYPE: $
+    SV *s
     CODE:
         STRLEN len;
         char *  ptr = SvPV(s, len);
@@ -69,8 +69,8 @@ tth(s)
   
 SV *
 tthfile(s)
-    SV *s
     PROTOTYPE: $
+    SV *s
     CODE:
     STRLEN len;
     char *  file = SvPV(s, len);
