@@ -152,7 +152,8 @@ sub new {
     'wait_clients_by'    => 0.01,
     'work_sleep'         => 0.01,
     'cmd_recurse_sleep'  => 0,
-    ( $^O eq 'MSWin32' ? () : ( 'nonblocking' => 1 ) ),
+#    ( $^O eq 'MSWin32' ? () : ( 'nonblocking' => 1 ) ),
+'nonblocking' => 1,
     'informative' => [qw(number peernick status host port filebytes filetotal proxy bytes_send bytes_recv)],    # sharesize
     'informative_hash'     => [qw(clients)],                   #NickList IpList PortList
     'disconnect_recursive' => 1,
@@ -940,6 +941,7 @@ sub func {
       $name =~ s{^.*[\\/]}{}g;
       $self->{'file_send_left'}  = $size;
       $self->{'file_send_total'} = -s $file;
+      $self->{'file_send_offset'} = $start || 0;
       if ( $self->{'adc'} ) { $self->cmd( 'C', 'SND', 'file', $as || $name, $start, $size ); }
       else                  { $self->cmd( 'ADCSND', 'file', $as || $name, $start, $size ); }
       $self->{'status'} = 'transfer';
@@ -955,30 +957,59 @@ sub func {
     my $read = $self->{'file_send_left'};
     $read = $self->{'file_send_by'} if $self->{'file_send_by'} < $self->{'file_send_left'};
     #my $readed =
-    read $self->{'filehandle_send'}, $self->{'file_send_buf'}, $read
+    my $sended;
+    
+    if ($INC{'Sys/Sendfile.pm'}) { #works
+    
+    
+	    
+	#    Sys::Sendfile::sendfile fileno($self->{'socket'}), fileno($self->{'filehandle_send'}), $read;
+	    $sended = Sys::Sendfile::sendfile( $self->{'socket'}, $self->{'filehandle_send'}, $read, 
+	    $self->{'file_send_offset'}
+	    );
+#	    );
+#	$self->log(      'dev','ssendfile0', $read, $self->{'file_send_left'}, ' = ', $sended );
+	    $self->{'file_send_offset'} += $sended;
+	    
+	    }
+=sux	    
+    elsif ( $INC{'Sys/Sendfile/FreeBSD.pm'}) {
+#    use Sys::Sendfile::FreeBSD qw(sendfile);
+# use Errno qw(EINTR EIO :POSIX);
+    $self->log(      'dev','fsendfile1',  $self->{'file_send_offset'}, $read, 'left', $self->{'file_send_left'}, '=', $sended, 'ff=', fileno($self->{'filehandle_send'}), fileno($self->{'socket'}));
+#my $result = sendfile(fileno($self->{'filehandle_send'}), fileno($self->{'socket'}), $self->{'file_send_offset'}, $read, $sended);
+my $result = sendfile( fileno($self->{'socket'}), fileno($self->{'filehandle_send'}),$self->{'file_send_offset'}, $read, $sended);
+    $self->log(      'dev','fsendfile1',  $self->{'file_send_offset'}, $read, 'left', $self->{'file_send_left'}, 's=', $sended, 'r=',  $result, $!, 
+    #Dumper \%!
+#    grep {$!{$_}} keys %!
+    );
+
+}
+=cut
+=sux
+    elsif ($INC{'IO/AIO.pm'}) {
+
+    $self->log(      'dev','sendfile0',  $self->{'file_send_offset'}, $read, 'left', $self->{'file_send_left'}, '=', $sended);
+#use IO::AIO;
+# $sended = IO::AIO::sendfile(  fileno($self->{'filehandle_send'}), $self->{'socket'}->fileno(),$self->{'file_send_offset'}, $read );
+# $sended = IO::AIO::sendfile(   $self->{'socket'}->fileno(), fileno($self->{'filehandle_send'}),$self->{'file_send_offset'}, $read );
+# $sended = IO::AIO::sendfile(   fileno($self->{'socket'}), fileno($self->{'filehandle_send'}),$self->{'file_send_offset'}, $read );
+ $sended = IO::AIO::sendfile(   $self->{'socket'}, $self->{'filehandle_send'},$self->{'file_send_offset'}, $read );
+ #$self->{'file_send_left'}
+
+    $self->log(      'dev','sendfile1',  $self->{'file_send_offset'}, $read, 'left', $self->{'file_send_left'}, '=', $sended);
+$self->{'file_send_offset'} += $sended;
+#$self->{'file_send_offset'} += $read, $sended = $read,if $sended == 12;
+} 
+=cut
+else {
+    read( $self->{'filehandle_send'}, $self->{'file_send_buf'}, $read),
+    $self->{'file_send_offset'} = tell $self->{'filehandle_send'},
       unless length $self->{'file_send_buf'};    #$self->{'file_send_by'};
 
-schedule 10, our $printsending__ ||= sub {
-our($lastmark,$lasttime );
-    $self->log(
-      'dev',
-      "sending bytes",      #length $self->{'file_send_buf'},
-      "readed [",
-      length $self->{'file_send_buf'},
-      "] by [$read:$self->{'file_send_by'}] left $self->{'file_send_left'},",
-      tell $self->{'filehandle_send'},
-      'of',
-      $self->{'file_send_total'},  's=',
-(tell($self->{'filehandle_send'}) - $lastmark)  / (time -  $lasttime or 1 ),
-
-
-    );
-$lastmark = tell $self->{'filehandle_send'};
-$lasttime = time;
-};
     #send $self->{'socket'},
     #$self->{'socket'}->send( buf, POSIX::BUFSIZ, $self->{'recv_flags'} )
-    my $sended;
+#    my $sended;
 #    $self->log(      'snd',      length $self->{'file_send_buf'},
       eval {
         $self->{bytes_send} += $sended = $self->{'socket'}->send( $self->{'file_send_buf'} );
@@ -988,6 +1019,28 @@ $lasttime = time;
       }; # if $self->{'socket'};
 #      $!    );
     $self->log( 'err', 'send error', $@ ) if $@;
+}
+
+
+schedule 10, our $printsending__ ||= sub {
+our($lastmark,$lasttime );
+    $self->log(
+      'dev',
+      "sending bytes",      #length $self->{'file_send_buf'},
+      "buf [",
+      length $self->{'file_send_buf'},
+      "] by [$read:$self->{'file_send_by'}] left $self->{'file_send_left'}, now",
+      $self->{'file_send_offset'},
+      'of',
+      $self->{'file_send_total'},  's=',
+($self->{'file_send_offset'} - $lastmark)  / (time -  $lasttime or 1 ),
+    );
+$lastmark = $self->{'file_send_offset'};
+$lasttime = time;
+};
+
+
+
     $self->{'file_send_left'} -= $sended;
 
     substr( $self->{'file_send_buf'}, 0, $sended ) = undef;
@@ -995,6 +1048,7 @@ $lasttime = time;
     
      $self->log( 'info', 'sended small', $sended, 'todo', length $self->{'file_send_buf'});
     }
+
     #$readed;
     if ( $self->{'file_send_left'} < 0 ) {
       $self->{'log'}->( 'err', "oversend [$self->{'file_send_left'}]" );
